test/types/range/deitz/test_range_iterate_error.good
test_range_iterate_error.chpl:1: error: iteration over a range with no first index
